[package]
name = "rv_emu_rs"
description = "A RISC-V 32-bit emulator written in Rust"
author = "Monstrous Moonshine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[dependencies]
num_enum = "0.5.6"